--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <body>
     <!-- section above navbar -->
     <div class="section-above-navbar">
-
+        <i class="fa-sharp fa-light fa-hexagon hexagon1"></i>
+        <img src="./home-pg-images/hpwm.png" class="logo-above"/>
     </div>
 
     <!-- navbar -->
     <nav class="navbar navbar-expand sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img class="navbar-logo-img" src="./home-pg-images/hpwm.png"
+            <a class="navbar-brand" href="./index.html"> <img class="navbar-logo-img" src="./home-pg-images/hpwm-white.png"
                     alt="logo-img" /></a>
 
             <ul class="navbar-nav">
@@ -116,26 +117,88 @@
         <div class="card card1">
             <i class="fa-solid fa-hand-holding-heart card-icon"></i>
             <p class="cards-heading">Who we are?</p>
-            <p class="cards-cap">We organize, promote, undertake, sponsor carry out all programmes for the benefit of naturally challenged person, schedule caste, schedule tribes, people under poverty line, 
+            <p class="cards-cap">We organize, promote, undertake, sponsor carry out all programmes for the benefit of
+                naturally challenged person, schedule caste, schedule tribes, people under poverty line,
                 old aged widow and down trodden irrespective of caste,creed,sex and gender.</p>
         </div>
         <div class="card card2">
             <i class="fa-solid fa-seedling card-icon"></i>
             <p class="cards-heading">What we do?</p>
-            <p class="cards-cap">We are the group of people who think about other people's good and are always eager to 
+            <p class="cards-cap">We are the group of people who think about other people's good and are always eager to
                 provide helping hands to the needy and we believe that change in the society can only be
                 brought from starting with ourselves.
-                </p>
+            </p>
         </div>
         <div class="card card3">
             <i class="fa-solid fa-hand-holding-hand card-icon"></i>
             <p class="cards-heading">How we do?</p>
-            <p class="cards-cap">We organize programmes for the promotion of pre-primary education, run or 
+            <p class="cards-cap">We organize programmes for the promotion of pre-primary education, run or
                 maintain a hospital, nursing home care centers, distribute food packets to street children,
                 provide food grains to old age homes and orphan houses.
-                </p>
+            </p>
         </div>
     </div>
+
+    <!-- welcome section -->
+
+    <div class="welcome-sec">
+        <div class="welcome-head"> Welcome to Haripratap <br /> Memorial & Welfare Trust </div>
+        <div class="hr-welcome"> </div>
+        <div class="welcome-content"> Our NGO works for providing healthy lifestyle for one's growth and development. We
+            have extended our scope by providing accidental insurances to the peoples across the small tribal areas that
+            are free of costs. Moreover, the people are being educated about government schemes and policies like PM
+            suraksha beema yojna and PM Sehat Beema Yojna and enables them to attain this without any hindrances.</div>
+        <img src="./home-pg-images/welcome-sec-img.jpg" class="welcome-sec-img" />
+        <button type="button" class="btn btn-about-us"> About Us </button>
+        <img src="./home-pg-images/welcome-sec-bg.jpg" class="welcome-bg" />
+    </div>
+
+    <!-- gallery section -->
+
+    <div class="gallery-sec">
+        <div class="gallery-head"> Media Gallery </div>
+        <div class="hr-gallery"> </div>
+        <img src="./home-pg-images/gallery-sec-bg.jpeg" class="gallery-bg" />
+    </div>
+
+    <!-- testimonial section -->
+
+    <div class="testimonial-sec">
+
+    </div>
+
+    <!-- footer -->
+
+    <footer class="footer-sec">
+        <div class="logo-link-footer">
+            <img src="./home-pg-images/hpwm.png" class="footer-img" />
+            <div class="link-icon">
+                <a href="https://instagram.com/hpmw_trust?igshid=NGVhN2U2NjQ0Yg==" class="link-icon-ins"> <i
+                        class="fa-brands fa-instagram"></i> </a>
+                <a href="https://www.facebook.com/profile.php?id=61553481217676" class="link-icon-fac"> <i
+                        class="fa-brands fa-facebook"></i> </a>
+            </div>
+        </div>
+        <div class="links-footer">
+            <ul class="links-list">
+                <li> Useful Links </li>
+                <li> Become a Volunteer </li>
+                <li> Donate </li>
+                <li> About Us </li>
+                <li> Media Gallery </li>
+                <li> Privacy Policy </li>
+            </ul>
+        </div>
+        <div class="contact-footer">
+            <ul class="contact-list">
+                <li> Contact </li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+            </ul>
+        </div>
+        <img src="./home-pg-images/footer-sec-bg.jpg" class="footer-bg-img" />
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
