--- a/index.html
+++ b/index.html
@@ -38,35 +38,35 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
+                    <a class="nav-link" href="./aboutus.html" role="button" aria-expanded="false">
+                        <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false"> -->
                         About Us
                     </a>
-                    <ul class="dropdown-menu">
+                    <!-- <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Advisory Committee</a></li>
                         <li><a class="dropdown-item" href="#">Board Members</a></li>
                         <li><a class="dropdown-item" href="#">Members</a></li>
                         <li><a class="dropdown-item" href="#">Vision & Mission</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
+                    <a class="nav-link" href="#" role="button" aria-expanded="false">
                         Projects
                     </a>
-                    <ul class="dropdown-menu">
+                    <!-- <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link " href="#" role="button"
                         aria-expanded="false">
-                        Media
+                        Media Gallery
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Photo Gallery</a></li>
@@ -90,7 +90,7 @@
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade ">
             <div class="carousel-inner">
-                <div class="carousel-heading"> Together we <br /> can save the world! </div>
+                <div class="carousel-heading"> Together we <br /> can change the world! </div>
                 <div class="carousel-cap"> Let's help people altogether. </div>
                 <button type="button" class="btn btn-donate-cr">Donate</button>
                 <button type="button" class="btn btn-joinus-cr">Join Us</button>
@@ -221,31 +221,35 @@
                 </ul>
                 <div id="testim-content" class="cont">
                     <div class="active">
-                        <div class="img"><img src="./home-pg-images/footer-sec-bg.jpg" alt=""></div>
-                        <h2>Lorem P. Ipsum</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                        <div class="img"><img src="./home-pg-images/testimonial-1.jpg" alt=""></div>
+                        <h2>Chirag Bhargava</h2>
+                        <p>"Being an integral part of Haripratap Memorial & Welfare Trust not only fills me with pride
+                            but also ignites a profound sense of purpose.It is my privilege to contribute to an
+                            organization that stands as a beacon of positive change, unique in its mission and impact."
+                        </p>
+                    </div>
+                    <div>
+                        <div class="img"><img src="./home-pg-images/testimonial-2.jpg" alt=""></div>
+                        <h2>Namit Goyal</h2>
+                        <p>"Participating in the activities of the Haripratap Memorial & Welfare Trust has been a truly
+                            transformative journey for me. The organization's steadfast dedication to fostering positive
+                            change through initiatives in education and community empowerment is truly motivating. I
+                            take great pride in being able to contribute to a cause that has a tangible and
+                            meaningful impact."
+                        </p>
+                    </div>
+                    <div>
+                        <div class="img"><img src="./home-pg-images/testimonial-3.jpg" alt=""></div>
+                        <h2>Kanishka Mittal</h2>
+                        <p>"Being a part of Haripratap Memorial & Welfare Trust has been a transformative experience.
+                            Their unwavering commitment to positive change through education and community empowerment
+                            is inspiring. Proud to contribute to a cause that makes a real difference."
                         </p>
                     </div>
                     <div>
                         <div class="img"><img src="./home-pg-images/footer-sec-bg.jpg" alt=""></div>
-                        <h2>Mr. Lorem Ipsum</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-                        </p>
-                    </div>
-                    <div>
-                        <div class="img"><img src="./home-pg-images/footer-sec-bg.jpg" alt=""></div>
-                        <h2>Lorem Ipsum</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-                        </p>
-                    </div>
-                    <div>
-                        <div class="img"><img src="./home-pg-images/footer-sec-bg.jpg" alt=""></div>
-                        <h2>Lorem De Ipsum</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                        <h2>Anuj Kumar</h2>
+                        <p>"Haripratap Memorial and Welfare Trust holds a special place in my heart. Their dedication to empowering communities through education, healthcare, and social initiatives is truly commendable. I've witnessed firsthand the positive impact of their programs, providing hope and opportunities to those in need. The Trust's commitment to making a meaningful difference in people's lives is inspiring and deserving of all recognition."
                         </p>
                     </div>
                     <div>
