--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@
                     </div>
                     <div>
                         <div class="img"><img src="./home-pg-images/footer-sec-bg.jpg" alt=""></div>
-                        <h2>Ms. Lorem R. Ipsum</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                        <h2>Mohit Parashar</h2>
+                        <p>Hari Pratap Memorial & Welfare Trust is unwavering in its commitment to creating a lasting impact on the lives of those in need. The projects and initiatives undertaken by the NGO are well-planned, meticulously executed, and rooted in a genuine understanding of the communities they serve. The organization's approach goes beyond short-term relief, focusing on sustainable development and empowerment.
                         </p>
                     </div>
                 </div>
